before MatrizMadre update

--- a/LimenawebApp/Views/Commercial/Credits_request.cshtml
+++ b/LimenawebApp/Views/Commercial/Credits_request.cshtml
@@ -163,7 +163,7 @@
                 <br /><br />
                       <div id="returnproductdiv" style="display:none">
                           <select name="returnProduct" id="returnProduct" style=" width:100%;" class="form-control">
-                              <option value="0">Select a product to return</option>
+                              <option value="0">Select shipped product</option>
                           </select>
                       </div>
 
