Antes de cambios en PlanningSO, OpenSalesOrders y Bi_dim_customers

--- a/LimenawebApp/Views/Commercial/Prices_requestHistory.cshtml
+++ b/LimenawebApp/Views/Commercial/Prices_requestHistory.cshtml
@@ -85,7 +85,7 @@
                                                         }
                                                         else if (product.Estado == 2)
                                                         {
-                                                    <span class="badge badge-warning">Approved</span>
+                                                    <span class="badge badge-info">Approved</span>
                                                         }
                                                         else if (product.Estado == 3)
                                                         {
