--- a/LimenawebApp/Views/Commercial/Credits_authorize.cshtml
+++ b/LimenawebApp/Views/Commercial/Credits_authorize.cshtml
@@ -13,29 +13,51 @@
                             <div class="custom-title-wrap bar-primary">
                                 <div class="custom-title">Credits Authorize</div>
                                 <div class=" widget-action-link">
-                                    <div class="dropdown">
-                                        <a href="#" class="btn btn-transparent text-secondary dropdown-hover p-0" data-toggle="dropdown">
-                                            <i class=" vl_ellipsis-fill-h"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right vl-dropdown">
-                                        </div>
-                                    </div>
+                                    @*<div class="dropdown">
+                        <a href="#" class="btn btn-transparent text-secondary dropdown-hover p-0" data-toggle="dropdown">
+                            <i class=" vl_ellipsis-fill-h"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right vl-dropdown">
+                        </div>
+                    </div>*@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="form-row">
+                            <div class="col-4">
+                                <label class="col-sm-12 col-form-label col-form-label-sm">Filter by Date</label>
+                                <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px;margin-left: 14px; margin-right:15px; border: 1px solid #ccc; width: 100%">
+                                    <i class="mdi mdi-calendar"></i>&nbsp;
+                                    <span></span> <i class="fa fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="col-1">
+                                
+                            </div>
+                            <div class="col-3">
+                                Customers:
+                                <select id="lstCustomers" class="form-control" multiple="multiple"></select>
+                            </div>
+                            <div class="col-3">
+                                Users:
+                                <select id="lstSalesReps" class="form-control" multiple="multiple"></select>
+                            </div>
+                        </div>
+
                         <div class="card-body- pt-3 pb-4">
                             <div class="table-responsive">
-                                <table id="data_table" class="table table-bordered table-striped" cellspacing="0">
+                                <table id="data_tableEditor2" class="table table-bordered table-striped" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th style="font-size:10px;">ID</th>
-                                            <th style="font-size:10px;">SAP NUM</th>
+                                            <th style="font-size:9px;">ID</th>
+                                            <th style="font-size:9px;">SAP NUM</th>
                                             <th style="display:none;">LINE NUM</th>
                                             <th style="font-size:12px;">ROUTE</th>
                                             <th style="font-size:12px;">Customer</th>
                                             <th style="font-size:12px;">Product</th>
-                                            <th style="font-size:12px;">UoM</th>
-                                            <th style="font-size:12px;">QTY</th>
+                                            <th style="font-size:10px;">UoM</th>
+                                            <th style="font-size:10px;">QTY</th>
                                             <th style="font-size:12px;">Reason</th>
                                             <th style="font-size:12px;">Product to return</th>
                                             <th style="font-size:12px;">User</th>
@@ -51,82 +73,90 @@
                                     </tfoot>
                                     <tbody>
                                         @foreach (var product in Model)
-                                        {
-                                            <tr>
-                                                <td style="font-size:10px;">@product.ID_creditRequest</td>
-                                                <td style="font-size:10px;">@product.DocNumSAP</td>
-                                                <td style="display:none">@product.LineNum</td>
-                                                <td style="font-size:11px;">@product.Route</td>
-                                                <td style="font-size:11px;">@product.CardName</td>
-                                                <td style="font-size:11px;">@product.ItemName</td>
-                                                <td style="font-size:11px;">@product.UoMCode</td>
-                                                <td style="font-size:11px;">@product.Quantity</td>
-                                                <td style="font-size:11px;">@product.Request_reason</td>
-                                                <td style="font-size:11px;">
-                                                @if (product.ReturnItemCode == "" || product.ReturnItemCode==null) {
-                                                    <label>NA</label>
-                                                } else {
-
-                                                    <label>@product.ReturnItemName</label> 
-                                                }</td>
-                                                <td style="font-size:11px;">@product.userCreateName</td>
-                                                <td style="font-size:11px;">@product.dateCreate.ToShortDateString()</td>
-
-                                                <td>
-                                                    @if (product.URL_image == "" || product.URL_image == null)
-    {
-
-    }
-    else
-    {
-                                                <img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="img_@product.ID_creditRequest" src="@Url.Content(product.URL_image)" alt="" />
+                    {
+                        <tr>
+                            <td style="font-size:7px;">@product.ID_creditRequest</td>
+                            <td style="font-size:9px;">@product.DocNumSAP</td>
+                            <td style="display:none">@product.LineNum</td>
+                            <td style="font-size:11px;">@product.Route</td>
+                            <td style="font-size:11px;">@product.CardName</td>
+                            <td style="font-size:11px;">@product.ItemName</td>
+                            <td style="font-size:10px;">@product.UoMCode</td>
+                            <td style="font-size:10px;">@product.Quantity</td>
+                            <td style="font-size:11px;">@product.Request_reason</td>
+                            <td style="font-size:11px;">
+                                @if (product.ReturnItemCode == "" || product.ReturnItemCode == null)
+            {
+                    <label>NA</label>
 }
-                                                    @if (product.URL_image2 == "" || product.URL_image2 == null)
-    {
+else
+{
 
-    }
-    else
-    {
-                                                <img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="img2_@product.ID_creditRequest" src="@Url.Content(product.URL_image2)" alt="" />
+                    <label>@product.ReturnItemName</label>
 }
+                            </td>
+                            <td style="font-size:11px;">@product.userCreateName</td>
+                            <td style="font-size:11px;">@product.dateCreate.ToShortDateString()</td>
 
-                                                </td>
-                                                <td style="font-size:10px;">@product.comments</td>
-                                                <td style="font-size:11px;">
-
-                                                    @if (product.estado==0) {
-                                                        
-                                                         <label class="text-warning"> Waiting for authorization</label>
-                                                    }
-                                                    else if (product.estado == 2)
-                                                    {
-                                                        <label class="text-success">Authorized</label>
-                                                    }
-                                                    else if (product.estado == 1)
-                                                    {
-                                                        <label class="text-danger">Not Authorized</label>
-                                                    }else if (product.estado == 3)
-                                                    {
-                                                        <label class="text-success">On SAP</label>
-                                                    }else if (product.estado == 4)
-                                                    {
-                                                        <label class="text-warning">Waiting Order</label>
-                                                    }else if (product.estado == 5)
-                                                    {
-                                                        <label class="text-danger">Expired</label>
-                                                    }
-                                                </td>
-                                                <td>
-
-        @if (ViewBag.isadmin == 0)
-        {
-            if (product.estado == 2 || product.estado == 1 || product.estado == 3 || product.estado == 4)
+                            <td>
+                                @if (product.URL_image == "" || product.URL_image == null)
             {
 
             }
             else
             {
-                                                <a href="javascript:void(0)" onclick="deleteRequest(@product.ID_creditRequest)" class="btn btn-outline-danger btn-sm form-pill" title="Delete"><i class="fa fa-trash-o"></i></a>
+                    <img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="img_@product.ID_creditRequest" src="@Url.Content(product.URL_image)" alt="" />
+}
+                                @if (product.URL_image2 == "" || product.URL_image2 == null)
+            {
+
+            }
+            else
+            {
+                    <img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="img2_@product.ID_creditRequest" src="@Url.Content(product.URL_image2)" alt="" />
+}
+
+                            </td>
+                            <td style="font-size:10px;">@product.comments</td>
+                            <td style="font-size:11px;">
+
+                                @if (product.estado == 0)
+            {
+
+                    <label class="text-warning"> Waiting for authorization</label>
+}
+else if (product.estado == 2)
+{
+                    <label class="text-success">Authorized</label>
+}
+else if (product.estado == 1)
+{
+                    <label class="text-danger">Not Authorized</label>
+}
+else if (product.estado == 3)
+{
+                    <label class="text-success">On SAP</label>
+}
+else if (product.estado == 4)
+{
+                    <label class="text-warning">Waiting Order</label>
+}
+else if (product.estado == 5)
+{
+                    <label class="text-danger">Expired</label>
+}
+                            </td>
+                            <td>
+
+                                @if (ViewBag.isadmin == 0)
+            {
+                if (product.estado == 2 || product.estado == 1 || product.estado == 3 || product.estado == 4)
+                {
+
+                }
+                else
+                {
+                    <a href="javascript:void(0)" onclick="deleteRequest(@product.ID_creditRequest)" class="btn btn-outline-danger btn-sm form-pill" title="Delete"><i class="fa fa-trash-o"></i></a>
 }
 
 
@@ -139,18 +169,18 @@ if (product.estado == 2 || product.estado == 1 || product.estado == 3 || product
 }
 else
 {
-                                                <a href="javascript:void(0)" onclick="approveRequest(@product.ID_creditRequest)" class="btn btn-outline-success btn-sm form-pill" title="Authorize"><i class="fa fa-check"></i></a>
-                                                <a href="javascript:void(0)" onclick="disapproveRequest(@product.ID_creditRequest)" class="btn btn-outline-danger btn-sm form-pill" title="Reject/Refuse"><i class="fa fa-close"></i></a>
+                    <a href="javascript:void(0)" onclick="approveRequest(@product.ID_creditRequest)" class="btn btn-outline-success btn-sm form-pill" title="Authorize"><i class="fa fa-check"></i></a>
+                    <a href="javascript:void(0)" onclick="disapproveRequest(@product.ID_creditRequest)" class="btn btn-outline-danger btn-sm form-pill" title="Reject/Refuse"><i class="fa fa-close"></i></a>
 }
 
 }
 
 
 
-                                                </td>
-                                            </tr>
+                            </td>
+                        </tr>
 
-                                        }
+}
 
                                     </tbody>
                                 </table>
@@ -162,6 +192,186 @@ else
         </div>
     </div>
 </div>
+
+<script>
+    window.onload = function () {
+
+        var flag = 0;
+       //DATETIMEPICKER
+ var t1 = "@ViewBag.filtrofechastart";
+        var t2 = "@ViewBag.filtrofechaend";
+
+        var start = moment(t1, "MM-DD-YYYY");
+        var end = moment(t2, "MM-DD-YYYY");
+
+        function cb(start, end) {
+            $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+            if (flag == 0) {
+                flag = 1;
+            } else {
+                filterSObydate();
+            }
+
+
+        }
+
+        $('#reportrange').daterangepicker({
+
+            startDate: start,
+            endDate: end,
+            autoApply: false,
+            ranges: {
+                'Today': [moment(), moment()],
+                'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                'This Month': [moment().startOf('month'), moment().endOf('month')],
+                'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+            }
+        }, cb);
+
+        cb(start, end);
+
+
+                function filterSObydate() {
+            var st = new Date($('#reportrange').data('daterangepicker').startDate);
+            var ed = new Date($('#reportrange').data('daterangepicker').endDate);
+
+            //st = st.toLocaleDateString();
+            //ed = ed.toLocaleDateString();
+            ////colocamos la url de la demo
+
+
+
+            var today = st;
+            var dd = today.getDate();
+            var mm = today.getMonth() + 1; //January is 0!
+
+            var yyyy = today.getFullYear();
+            if (dd < 10) {
+                dd = '0' + dd;
+            }
+            if (mm < 10) {
+                mm = '0' + mm;
+            }
+            st = mm + '/' + dd + '/' + yyyy;
+
+            var today2 = ed;
+            var dd2 = today2.getDate();
+            var mm2 = today2.getMonth() + 1; //January is 0!
+
+            var yyyy2 = today2.getFullYear();
+            if (dd2 < 10) {
+                dd2 = '0' + dd2;
+            }
+            if (mm2 < 10) {
+                mm2 = '0' + mm2;
+            }
+            ed = mm2 + '/' + dd2 + '/' + yyyy2;
+
+            var url = '@Url.Action("Credits_authorize", "Commercial", new { fstartd = "dad", fendd="tfe" })';
+            url = url.replace('dad', st);
+            var newurl = url;
+            newurl = newurl.replace('tfe', ed);
+
+            newurl = newurl.replace(/&amp;/g, "&");
+
+            window.location.href = newurl;
+        };
+
+
+
+        var table = $('#data_tableEditor2').DataTable({
+
+            initComplete: function () {
+
+                this.api().columns([4]).every(function () {
+
+                    var column = this;
+
+
+
+                    var select = $("#lstCustomers");
+
+                    column.data().unique().sort().each(function (d, j) {
+
+                        select.append('<option value="' + d + '">' + d + '</option>')
+
+                    });
+
+                });
+
+                this.api().columns([10]).every(function () {
+
+                    var column = this;
+
+
+
+                    var select = $("#lstSalesReps");
+
+                    column.data().unique().sort().each(function (d, j) {
+
+                        select.append('<option value="' + d + '">' + d + '</option>')
+
+                    });
+
+                });
+
+
+                $("#lstCustomers").select2({ multiple: true });
+
+                $("#lstSalesReps").select2({ multiple: true });
+
+            }
+
+        });
+
+
+        $('#lstCustomers').on('change', function () {
+
+            var search = [];
+
+
+
+            $.each($('#lstCustomers option:selected'), function () {
+
+                search.push($(this).val());
+
+            });
+
+
+
+            search = search.join('|');
+
+            table.column(4).search(search, true, false).draw();
+
+        });
+
+
+
+        $('#lstSalesReps').on('change', function () {
+
+            var search = [];
+
+
+
+            $.each($('#lstSalesReps option:selected'), function () {
+
+                search.push($(this).val());
+
+            });
+
+
+
+            search = search.join('|');
+
+            table.column(10).search(search, true, false).draw();
+
+        });
+    }
+
+</script>
+
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -169,4 +379,5 @@ else
     <div id="caption"></div>
     <span class="close">&times;</span>
 </div>
+
 
