--- a/LimenawebApp/Views/Invoices/QualityControl_planning.cshtml
+++ b/LimenawebApp/Views/Invoices/QualityControl_planning.cshtml
@@ -171,14 +171,14 @@ else
         cb(start, end);
 
 
-        function filterSObydate() {
+        @*function filterSObydate() {
             var st = new Date($('#reportrange').data('daterangepicker').startDate);
             var ed = new Date($('#reportrange').data('daterangepicker').endDate);
 
             st = st.toLocaleDateString();
             ed = ed.toLocaleDateString();
             //colocamos la url de la demo
-            var url = '@Url.Action("QualityControl_planning", "Invoices", new { fstartd = "dad", fendd="tfe" })';
+            var url = 'Url.Action("QualityControl_planning", "Invoices", new { fstartd = "dad", fendd="tfe" })';
             url = url.replace('dad', st);
             var newurl = url;
             newurl = newurl.replace('tfe', ed);
@@ -186,7 +186,56 @@ else
             newurl = newurl.replace(/&amp;/g, "&");
      
             window.location.href = newurl;
+        };*@
+
+
+
+        function filterSObydate() {
+            var st = new Date($('#reportrange').data('daterangepicker').startDate);
+            var ed = new Date($('#reportrange').data('daterangepicker').endDate);
+
+            //st = st.toLocaleDateString();
+            //ed = ed.toLocaleDateString();
+            ////colocamos la url de la demo
+
+
+
+            var today = st;
+            var dd = today.getDate();
+            var mm = today.getMonth() + 1; //January is 0!
+
+            var yyyy = today.getFullYear();
+            if (dd < 10) {
+                dd = '0' + dd;
+            }
+            if (mm < 10) {
+                mm = '0' + mm;
+            }
+            st = mm + '/' + dd + '/' + yyyy;
+
+            var today2 = ed;
+            var dd2 = today2.getDate();
+            var mm2 = today2.getMonth() + 1; //January is 0!
+
+            var yyyy2 = today2.getFullYear();
+            if (dd2 < 10) {
+                dd2 = '0' + dd2;
+            }
+            if (mm2 < 10) {
+                mm2 = '0' + mm2;
+            }
+            ed = mm2 + '/' + dd2 + '/' + yyyy2;
+
+            var url = '@Url.Action("QualityControl_planning", "Invoices", new { fstartd = "dad", fendd="tfe" })';
+            url = url.replace('dad', st);
+            var newurl = url;
+            newurl = newurl.replace('tfe', ed);
+
+            newurl = newurl.replace(/&amp;/g, "&");
+
+            window.location.href = newurl;
         };
+
     }
 
 </script>
